Right align selection dialog search fields
Place compact search fields in a right-aligned row above selection lists and keep the simpler JavaFX text field styling.

Assisted-by: codex:gpt-5.5